src/App.scss
#root {
  display: flex;
  justify-content: center;
}

.date-picker {
  display: flex;
  justify-content: center;
}

.travel-item-table {
  .title-bar {
    & > div {
      display: inline-block;
    }
  }

  input {
    box-sizing: border-box;
  }

  .start-odo,
  .end-odo,
  .distance {
    width: 100px;
  }

  .start-location,
  .end-location {
    width: 250px;
  }

  .delete-btn {
    width: 50px;
  }
}

.item-entry {
  display: grid;

  .start-location {
    display: flex;
  }

  .end-location {
    display: flex;
  }

  @media (min-width: 800px) {
    grid-template-areas:
      "startOdoLabel startLabel endLabel endOdoLabel distanceLabel actionCol"
      "startOdo start end endOdo distance action";
    grid-template-columns: 100px 200px 200px 100px 100px;

    .start-location-input {
      width: 100px;
    }

    .start-location-btn {
      width: 100px;
    }

    .end-location-input {
      width: 100px;
    }

    .end-location-btn {
      width: 100px;
    }
  }

  @media (max-width: 800px) {
    width: 100%;

    grid-template-areas:
      "startOdoLabel"
      "startOdo"
      "startLabel"
      "start"
      "endLabel"
      "end"
      "endOdoLabel"
      "endOdo"
      "distanceLabel"
      "distance"
      "actionCol"
      "action";

    .start-odo {
      font-size: 1.5rem;
    }

    .start-location-input {
      width: 0;
      flex: 1;
      font-size: 1.5rem;
    }

    .start-location-btn {
      width: 100px;
    }

    .end-location-input {
      width: 0;
      flex: 1;
      font-size: 1.5rem;
    }

    .end-odo {
      font-size: 1.5rem;
    }

    .distance {
      font-size: 1.5rem;
    }

    .end-location-btn {
      width: 100px;
    }
  }

  .lstart-odo {
    grid-area: startOdoLabel;
  }
  .lstart-location {
    grid-area: startLabel;
  }
  .lend-location {
    grid-area: endLabel;
  }
  .lend-odo {
    grid-area: endOdoLabel;
  }

  .ldistance {
    grid-area: distanceLabel;
  }

  .lactioncol {
    grid-area: actionCol;
  }

  .delete-btn {
    width: 50px;
  }
  input {
    box-sizing: border-box;
  }

  .start-odo {
    grid-area: startOdo;
  }
  .end-odo {
    grid-area: endOdo;
  }

  .start-location {
    grid-area: start;
  }
  .end-location {
    grid-area: end;
  }

  .start-location-input {
  }
  .end-location-input {
  }

  .distance {
    grid-area: distance;
  }

  .clear-btn {
    grid-area: action;
  }
}

